contrib/tree-sitter-parsley/grammar.js
    source_file: ($) => repeat($._statement),

    // ================================================================
    // Statements — parser.go L292-370 (parseStatement)
    // ================================================================

    _statement: ($) =>
      choice(
        $.let_statement,
        $.assignment_statement,
        $.dict_destructuring_assignment,
        $.export_statement,
        $.return_statement,
        $.check_statement,
        $.expression_statement,
      ),

    // parser.go L499-669 (parseLetStatement)
    // Forms: let x = expr, let {a,b} = expr, let [a,b] = expr
    // Also: let x <== expr, let x <=/= expr
    let_statement: ($) =>
      seq(
        choice("let", "var"),
        field("pattern", $._pattern),
        field("operator", choice("=", "<==", "<=/=")),
        field("value", $._expression),
      ),

    // parser.go L673-730 (parseAssignmentStatement)
    // Forms: x = expr, obj.name = expr, arr[0] = expr
    // Also: x <== expr, x <=/= expr
    expression_statement: ($) => $._expression,

    // ================================================================
    // Expressions — parser.go L957-1012 (parseExpression)
    // ================================================================

    _expression: ($) =>
      choice(
        $._primary_expression,
        $.prefix_expression,
        $.read_expression,
        $.fetch_expression,
        $.infix_expression,
        $.not_in_expression,
        $.is_expression,
        $.write_expression,
        $.call_expression,
        $.index_expression,
        $.slice_expression,
        $.member_expression,
        $.function_expression,
        $.if_expression,
        $.for_expression,
        $.try_expression,
        $.import_expression,
        $.tag_expression,
        $.parenthesized_expression,
        $.block,
        $.schema_declaration,
        $.table_expression,
        $.query_expression,
        $.mutation_expression,
      ),

    parenthesized_expression: ($) => seq("(", $._expression, ")"),

    // ================================================================
    // Prefix expressions — parser.go L1963-2000
    // ================================================================

    // parsePrefixExpression: -x, !x, not x
    prefix_expression: ($) =>
      prec.right(
        PREC.PREFIX,
        seq(
          field("operator", choice("-", "!", "not")),
          field("operand", $._expression),
        ),
      ),

    // parser.go L1977-1987 (parseReadExpression): <== expr
    read_expression: ($) =>
      prec.right(PREC.PREFIX, seq("<==", field("source", $._expression))),

    // parser.go L1990-2000 (parseFetchExpression): <=/= expr
    fetch_expression: ($) =>
      prec.right(PREC.PREFIX, seq("<=/=", field("source", $._expression))),

    // ================================================================
    // Infix expressions — parser.go L2002-2014, precedences L33-67
    // ================================================================

    infix_expression: ($) =>
      choice(
        // PRODUCT: * / % — parser.go precedences map
        ...[
          ["*", PREC.PRODUCT],
          ["/", PREC.PRODUCT],
          ["%", PREC.PRODUCT],
        ].map(([op, prec_val]) =>
          prec.left(
            prec_val,
            seq(
              field("left", $._expression),
              field("operator", op),
              field("right", $._expression),
            ),
          ),
        ),
        // CONCAT: ++
        prec.left(
          PREC.CONCAT,
          seq(
            field("left", $._expression),
            field("operator", "++"),
            field("right", $._expression),
          ),
        ),
        // SUM: + - ..
        ...["+", "-", ".."].map((op) =>
          prec.left(
            PREC.SUM,
            seq(
              field("left", $._expression),
              field("operator", op),
              field("right", $._expression),
            ),
          ),
        ),
        // COMPARE: < > <= >=
        ...["<", ">", "<=", ">="].map((op) =>
          prec.left(
            PREC.COMPARE,
            seq(
              field("left", $._expression),
              field("operator", op),
              field("right", $._expression),
            ),
          ),
        ),
        // EQUALS: == != ~ !~ in
        ...["==", "!=", "~", "!~", "in"].map((op) =>
          prec.left(
            PREC.EQUALS,
            seq(
              field("left", $._expression),
              field("operator", op),
              field("right", $._expression),
            ),
          ),
        ),
        // AND: and && &
        ...["and", "&&", "&"].map((op) =>
          prec.left(
            PREC.AND,
            seq(
              field("left", $._expression),
              field("operator", op),
              field("right", $._expression),
            ),
          ),
        ),
        // OR: or || | ??
        ...["or", "||", "|", "??"].map((op) =>
          prec.left(
            PREC.OR,
            seq(
              field("left", $._expression),
              field("operator", op),
              field("right", $._expression),
            ),
          ),
        ),
        // Database operators at EQUALS: <=?=> <=??=> <=!=>
        ...["<=?=>", "<=??=>", "<=!=>"].map((op) =>
          prec.left(
            PREC.EQUALS,
            seq(
              field("left", $._expression),
              field("operator", op),
              field("right", $._expression),
            ),
          ),
        ),
        // Process execution at EQUALS: <=#=>
        prec.left(
          PREC.EQUALS,
          seq(
            field("left", $._expression),
            field("operator", "<=#=>"),
            field("right", $._expression),
          ),
        ),
      ),

    // File I/O write operators at COMMA precedence — parser.go parseExpression special handling
    // ==> ==>> =/=> =/=>>
    write_expression: ($) =>
      prec.left(
        PREC.COMMA,
        seq(
          field("value", $._expression),
          field("operator", choice("==>", "==>>", "=/=>", "=/=>>")),
          field("target", $._expression),
        ),
      ),

    // parser.go L2019-2041 (parseNotInExpression)
    // expr not in expr — compound operator
    not_in_expression: ($) =>
      prec.left(
        PREC.EQUALS,
        seq(
          field("left", $._expression),
          "not",
          "in",
          field("right", $._expression),
        ),
      ),

    // parser.go L2045-2064 (parseIsExpression)
    // expr is expr, expr is not expr
    // Note: "is not" parses as is_expression with prefix_expression(not, schema).
    // This is a known limitation — tree-sitter cannot disambiguate "is not" from
    // "is (not expr)" without an external scanner. Functionally equivalent for highlighting.
    is_expression: ($) =>
      prec.left(
        PREC.EQUALS,
        seq(
          field("value", $._expression),
          "is",
          field("schema", $._expression),
        ),
      ),

    // ================================================================
    // Call, index, member — parser.go L2498-2637, L3082-3097
    // ================================================================

    // parser.go L2498-2531 (parseCallExpression)
    call_expression: ($) =>
      prec(
        PREC.CALL,
        seq(field("function", $._expression), field("arguments", $.arguments)),
      ),

    arguments: ($) => seq("(", commaSep($._expression), ")"),

    // parser.go L2579-2613 (parseIndexOrSliceExpression)
    index_expression: ($) =>
      prec(
        PREC.INDEX,
        seq(
          field("object", $._expression),
          "[",
          optional("?"),
          field("index", $._expression),
          "]",
        ),
      ),

    // parser.go L2615-2637 (parseSliceExpression)
    slice_expression: ($) =>
      prec(
        PREC.INDEX,
        seq(
          field("object", $._expression),
          "[",
          optional(field("start", $._expression)),
          ":",
          optional(field("end", $._expression)),
          "]",
        ),
      ),

    // parser.go L3082-3097 (parseDotExpression)
    member_expression: ($) =>
      prec(
        PREC.INDEX,
        seq(
          field("object", $._expression),
          ".",
          field("property", choice($.identifier, alias("as", $.identifier))),
        ),
      ),

    // ================================================================
    // Functions and blocks — parser.go L2286-2385
    // ================================================================

    // parser.go L2286-2301 (parseBlockStatement)
    block: ($) => seq("{", repeat($._statement), "}"),

    // parser.go L2303-2327 (parseFunctionLiteral)
    // Body is ALWAYS a block — no expression bodies
    function_expression: ($) =>
      seq(
        choice("fn", "function"),
        optional(field("parameters", $.parameter_list)),
        field("body", $.block),
      ),

    // parser.go L2330-2360 (parseFunctionParametersNew)
    parameter_list: ($) =>
      seq(
        "(",
        commaSep(
          choice(
            $.identifier,
            $._default_param,
            $._rest_param,
            $.array_pattern,
            $.dictionary_pattern,
          ),
        ),
        ")",
      ),

    // parser.go L2363-2385 (parseFunctionParameter — default value)
    _default_param: ($) =>
      seq(field("name", $.identifier), "=", field("default", $._expression)),

    // parser.go L2363-2385 (parseFunctionParameter — rest)
    _rest_param: ($) => seq("...", field("name", $.identifier)),

    // ================================================================
    // Control flow — parser.go L2171-2496
    // ================================================================

    // parser.go L2171-2284 (parseIfExpression)
    // Two forms:
    //   With parens: if (cond) consequence [else alternative]
    //     consequence can be block or single expression/statement
    //   Without parens: if cond { body } [else ...]
    //     consequence must be a block
    try_expression: ($) =>
      prec.right(PREC.PREFIX, seq("try", field("call", $._expression))),

    // parser.go L1871-1931 (parseImportExpression)
    _pattern: ($) =>
      choice(
        $.identifier,
        $.array_pattern,
        $.dictionary_pattern,
        alias("_", $.identifier),
      ),

    // parser.go L3193-3250 (parseArrayDestructuringPattern)
    number: ($) => /\d+(\.\d+)?/,

    // -------------------- Booleans --------------------
    // parser.go L1834-1836 — true/false are keywords
    // NOTE: null is NOT a keyword — it's an identifier that the evaluator special-cases
    string: ($) =>
      seq('"', repeat(choice($.escape_sequence, $._string_content)), '"'),

    // Higher precedence than TAG (12) to prevent <tag> inside strings from being tokenized as tag_start
    // Includes { since double-quoted strings don't have interpolation
    _string_content: ($) => token.immediate(prec(PREC.TAG + 2, /[^"\\]+/)),

    // lexer.go L1642-1664 (readTemplate) — backtick strings with {expr} interpolation
    regex: ($) =>
      token(seq("/", /[^/\n*][^/\n]*/, "/", optional(/[gimsuvy]+/))),

    // -------------------- Money --------------------
    // lexer.go L1275-1565 (readMoneyLiteral, isCurrencyCodeStart, isCompoundCurrencySymbol)
    path_literal: ($) =>
      token(
        prec(
          1,
          seq(
            "@",
            choice(
              seq(".", /[./]?/, /[^\s<>"{}|\\^`\[\]),:;]*/),
              seq("/", /[^\s<>"{}|\\^`\[\]),:;]*/),
              seq("~/", /[^\s<>"{}|\\^`\[\]),:;]*/),
            ),
          ),
        ),
      ),

    // @https://example.com, @http://..., @ftp://...
    // lexer.go L2841-2874 (readUrlLiteral)
    url_literal: ($) =>
      token(
        prec(
          2,
          seq("@", /(https?|ftp|file|wss?|ssh):\/\/[^\s<>"{}|\\^`\[\]),;]*/),
        ),
      ),

    // @(./path/{expr}), @(./{name}/file)
    // lexer.go L2972-3017 (readPathTemplate)
    array_literal: ($) => seq("[", commaSep($._expression), "]"),

    // parser.go L2988-3079 (parseDictionaryLiteral)
    // No spread, no shorthand properties — always key: value or [key]: value
    dictionary_literal: ($) =>
      prec.dynamic(
        -1,
        seq("{", commaSep(choice($.pair, $.computed_property)), "}"),
      ),

    pair: ($) =>
      seq(
        field("key", choice($.identifier, $.string)),
        ":",
        field("value", $._expression),
      ),

    // parser.go L2988-3079 — computed key: [expr]: value
    computed_property: ($) =>
      seq(
        "[",
        field("key", $._expression),
        "]",
        ":",
        field("value", $._expression),
      ),

    // ================================================================
    // Basic tokens
    // ================================================================

    // lexer.go L1248-1254 (readIdentifier)
    // Supports ASCII identifiers (Unicode handled via external scanner in Phase 2)
    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // lexer.go collectTrivia, skipAndCaptureComment
    comment: ($) => token(seq("//", /.*/)),
  },
});

/**
 * Comma-separated list with optional trailing comma
 * Used throughout: arrays, dicts, parameters, arguments
 */
function commaSep(rule) {
  return optional(seq(rule, repeat(seq(",", rule)), optional(",")));
}
