contrib/tree-sitter-parsley/test/corpus/expressions.txt
==================
Identifier expression
==================

x

---

(source_file
  (expression_statement
    (identifier)))

==================
Comment
==================

// this is a comment
x

---

(source_file
  (comment)
  (expression_statement
    (identifier)))

==================
Prefix minus
==================

-x

---

(source_file
  (expression_statement
    (prefix_expression
      operand: (identifier))))

==================
Prefix bang
==================

!flag

---

(source_file
  (expression_statement
    (prefix_expression
      operand: (identifier))))

==================
Prefix not
==================

not condition

---

(source_file
  (expression_statement
    (prefix_expression
      operand: (identifier))))

==================
Read expression
==================

<== @./file.txt

---

(source_file
  (expression_statement
    (read_expression
      source: (path_literal))))

==================
Fetch expression
==================

<=/= @https://example.com

---

(source_file
  (expression_statement
    (fetch_expression
      source: (url_literal))))

==================
Addition
==================

a + b

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier))))

==================
Subtraction
==================

a - b

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier))))

==================
Multiplication
==================

a * b

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier))))

==================
Division
==================

a / b

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier))))

==================
Modulo
==================

a % b

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier))))

==================
Concatenation
==================

a ++ b

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier))))

==================
Range operator
==================

1 .. 10

---

(source_file
  (expression_statement
    (infix_expression
      left: (number)
      right: (number))))

==================
Equality
==================

a == b

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier))))

==================
Not equal
==================

a != b

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier))))

==================
Less than
==================

a < 5

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (number))))

==================
Greater than
==================

a > 5

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (number))))

==================
Less than or equal
==================

a <= 5

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (number))))

==================
Greater than or equal
==================

a >= 5

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (number))))

==================
Regex match
==================

text ~ /pattern/

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (regex))))

==================
Regex not match
==================

text !~ /pattern/

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (regex))))

==================
Logical and keyword
==================

a and b

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier))))

==================
Logical and symbol
==================

a && b

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier))))

==================
Logical and single ampersand
==================

a & b

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier))))

==================
Logical or keyword
==================

a or b

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier))))

==================
Logical or symbol
==================

a || b

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier))))

==================
Logical or single pipe
==================

a | b

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier))))

==================
Nullish coalescing
==================

a ?? b

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier))))

==================
In operator
==================

x in list

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier))))

==================
Not in operator
==================

x not in list

---

(source_file
  (expression_statement
    (not_in_expression
      left: (identifier)
      right: (identifier))))

==================
Is operator
==================

value is Schema

---

(source_file
  (expression_statement
    (is_expression
      value: (identifier)
      schema: (identifier))))

==================
Is not operator
==================

value is not Schema

---

(source_file
  (expression_statement
    (is_expression
      value: (identifier)
      schema: (prefix_expression
        operand: (identifier)))))

==================
Write to file
==================

data ==> @./output.txt

---

(source_file
  (expression_statement
    (write_expression
      value: (identifier)
      target: (path_literal))))

==================
Append to file
==================

data ==>> @./log.txt

---

(source_file
  (expression_statement
    (write_expression
      value: (identifier)
      target: (path_literal))))

==================
Database query one
==================

db <=?=> query

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier))))

==================
Database query many
==================

db <=??=> query

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier))))

==================
Database execute
==================

db <=!=> mutation

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier))))

==================
Process execute with input
==================

cmd <=#=> input

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier))))

==================
Precedence — multiplication before addition
==================

1 + 2 * 3

---

(source_file
  (expression_statement
    (infix_expression
      left: (number)
      right: (infix_expression
        left: (number)
        right: (number)))))

==================
Precedence — and before or
==================

a or b and c

---

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (infix_expression
        left: (identifier)
        right: (identifier)))))

==================
Precedence — comparison before logical
==================

a > 0 and b < 10

---

(source_file
  (expression_statement
    (infix_expression
      left: (infix_expression
        left: (identifier)
        right: (number))
      right: (infix_expression
        left: (identifier)
        right: (number)))))

==================
Parenthesized expression
==================

(1 + 2) * 3

---

(source_file
  (expression_statement
    (infix_expression
      left: (parenthesized_expression
        (infix_expression
          left: (number)
          right: (number)))
      right: (number))))

==================
Call expression — no arguments
==================

f()

---

(source_file
  (expression_statement
    (call_expression
      function: (identifier)
      arguments: (arguments))))

==================
Call expression — with arguments
==================

f(1, 2, 3)

---

(source_file
  (expression_statement
    (call_expression
      function: (identifier)
      arguments: (arguments
        (number)
        (number)
        (number)))))

==================
Call expression — chained
==================

a.b()

---

(source_file
  (expression_statement
    (call_expression
      function: (member_expression
        object: (identifier)
        property: (identifier))
      arguments: (arguments))))

==================
Member expression — simple
==================

obj.name

---

(source_file
  (expression_statement
    (member_expression
      object: (identifier)
      property: (identifier))))

==================
Member expression — chained
==================

a.b.c

---

(source_file
  (expression_statement
    (member_expression
      object: (member_expression
        object: (identifier)
        property: (identifier))
      property: (identifier))))

==================
Member expression — as property
==================

dict.as

---

(source_file
  (expression_statement
    (member_expression
      object: (identifier)
      property: (identifier))))

==================
Index expression — simple
==================

arr[0]

---

(source_file
  (expression_statement
    (index_expression
      object: (identifier)
      index: (number))))

==================
Index expression — optional
==================

arr[?0]

---

(source_file
  (expression_statement
    (index_expression
      object: (identifier)
      index: (number))))

==================
Slice expression — full
==================

arr[1:3]

---

(source_file
  (expression_statement
    (slice_expression
      object: (identifier)
      start: (number)
      end: (number))))

==================
Slice expression — from start
==================

arr[:5]

---

(source_file
  (expression_statement
    (slice_expression
      object: (identifier)
      end: (number))))

==================
Slice expression — to end
==================

arr[2:]

---

(source_file
  (expression_statement
    (slice_expression
      object: (identifier)
      start: (number))))

==================
Array literal — empty
==================

[]

---

(source_file
  (expression_statement
    (array_literal)))

==================
Array literal — with elements
==================

[1, 2, 3]

---

(source_file
  (expression_statement
    (array_literal
      (number)
      (number)
      (number))))

==================
Array literal — nested
==================

[1, [2, 3]]

---

(source_file
  (expression_statement
    (array_literal
      (number)
      (array_literal
        (number)
        (number)))))

==================
Dictionary literal — empty
==================

{a: 1}

---

(source_file
  (expression_statement
    (dictionary_literal
      (pair
        key: (identifier)
        value: (number)))))

==================
Dictionary literal — identifier keys
==================

{a: 1, b: 2}

---

(source_file
  (expression_statement
    (dictionary_literal
      (pair
        key: (identifier)
        value: (number))
      (pair
        key: (identifier)
        value: (number)))))

==================
Dictionary literal — string keys
==================

{"name": "Alice"}

---

(source_file
  (expression_statement
    (dictionary_literal
      (pair
        key: (string)
        value: (string)))))

==================
Dictionary literal — computed key
==================

{[key]: value}

---

(source_file
  (expression_statement
    (dictionary_literal
      (computed_property
        key: (identifier)
        value: (identifier)))))

==================
Block expression
==================

{
  let x = 1
  x + 2
}

---

(source_file
  (expression_statement
    (block
      (let_statement
        pattern: (identifier)
        value: (number))
      (expression_statement
        (infix_expression
          left: (identifier)
          right: (number))))))

==================
Try expression
==================

try fetchData()

---

(source_file
  (expression_statement
    (try_expression
      call: (call_expression
        function: (identifier)
        arguments: (arguments)))))

==================
Try expression — method call
==================

try obj.load()

---

(source_file
  (expression_statement
    (try_expression
      call: (call_expression
        function: (member_expression
          object: (identifier)
          property: (identifier))
        arguments: (arguments)))))

==================
Chained method calls
==================

arr.map(fn(x) { x * 2 }).filter(fn(x) { x > 0 })

---

(source_file
  (expression_statement
    (call_expression
      function: (member_expression
        object: (call_expression
          function: (member_expression
            object: (identifier)
            property: (identifier))
          arguments: (arguments
            (function_expression
              parameters: (parameter_list
                (identifier))
              body: (block
                (expression_statement
                  (infix_expression
                    left: (identifier)
                    right: (number)))))))
        property: (identifier))
      arguments: (arguments
        (function_expression
          parameters: (parameter_list
            (identifier))
          body: (block
            (expression_statement
              (infix_expression
                left: (identifier)
                right: (number)))))))))
